@@ -157,6 +157,8 @@ CHANGES IN FLTK 1.3.0
 	- hide() and show() methods are now virtual from Fl_Widget,
 	  was only virtual since Fl_Window derived classes before.
 	  So now widget->hide() will work if widget is a window.
+        - New widgets: Fl_Tree, Fl_Table, Fl_Native_File_Chooser
+        - added Fl_Menu_ methods: insert(), find_index(), clear_submenu()
 
 CHANGES IN FLTK 1.1.9
 
